--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h2>GitHub Search</h2>
 
       <form id="github-form">
-        <input id="search" type="text" name="search" />
+        <input id="search" type="text" name="search" value="octocat" />
         <input type="submit" name="submit" />
       </form>
 
